# Email_Triage-

./: .gitignore  Dockerfile  README.md  app.py  docker.yaml  email_env.py  inference.py  model.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py
data/: personas.json
server/: app.py
tests/: test_email_triage.py
